add role to users and token
