# docs/swagger.json
@@ -14,6 +14,11 @@
     "paths": {
         "/cats": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Find all the cats in the database",
                 "produces": [
                     "application/json"
@@ -44,6 +49,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new cat entry in the database",
                 "consumes": [
                     "application/json"
@@ -96,6 +106,11 @@
         },
         "/cats/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a specific cat from the database by its ID",
                 "produces": [
                     "application/json"
@@ -141,6 +156,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing cat's information in the database",
                 "consumes": [
                     "application/json"
@@ -207,6 +227,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a cat from the database by its ID",
                 "produces": [
                     "application/json"
@@ -257,6 +282,11 @@
         },
         "/cats/{id}/history": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves the complete medical history of a cat including visits and treatments",
                 "produces": [
                     "application/json"
@@ -304,6 +334,11 @@
         },
         "/treatments": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a list of all treatments from the database",
                 "produces": [
                     "application/json"
@@ -334,6 +369,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new treatment entry in the database",
                 "consumes": [
                     "application/json"
@@ -386,6 +426,11 @@
         },
         "/treatments/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a specific treatment from the database by its ID",
                 "produces": [
                     "application/json"
@@ -431,6 +476,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing treatment's information in the database",
                 "consumes": [
                     "application/json"
@@ -497,6 +547,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a treatment from the database by its ID",
                 "produces": [
                     "application/json"
@@ -547,6 +602,11 @@
         },
         "/treatments/{id}/history": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves all treatments associated with a specific visit",
                 "produces": [
                     "application/json"
@@ -697,7 +757,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UserRequest"
+                            "$ref": "#/definitions/model.UserLoginRequest"
                         }
                     }
                 ],
@@ -705,7 +765,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.TokenResponse"
+                            "$ref": "#/definitions/model.TokensResponse"
                         }
                     },
                     "400": {
@@ -962,6 +1022,11 @@
         },
         "/visits": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a list of all visits from the database, optionally filtered by vet, reason, or date",
                 "produces": [
                     "application/json"
@@ -1012,6 +1077,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new visit entry in the database",
                 "consumes": [
                     "application/json"
@@ -1064,6 +1134,11 @@
         },
         "/visits/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a specific visit from the database by its ID, including associated treatments",
                 "produces": [
                     "application/json"
@@ -1109,6 +1184,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing visit's information in the database",
                 "consumes": [
                     "application/json"
@@ -1175,6 +1255,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a visit from the database by its ID",
                 "produces": [
                     "application/json"
@@ -1304,7 +1389,7 @@
                 }
             }
         },
-        "model.TokenResponse": {
+        "model.TokensResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -1351,6 +1436,17 @@
                 }
             }
         },
+        "model.UserLoginRequest": {
+            "type": "object",
+            "properties": {
+                "user_email": {
+                    "type": "string"
+                },
+                "user_password": {
+                    "type": "string"
+                }
+            }
+        },
         "model.UserRequest": {
             "type": "object",
             "properties": {
@@ -1358,6 +1454,9 @@
                     "type": "string"
                 },
                 "user_password": {
+                    "type": "string"
+                },
+                "user_role": {
                     "type": "string"
                 }
             }
@@ -1371,7 +1470,7 @@
                 "user_email": {
                     "type": "string"
                 },
-                "user_password": {
+                "user_role": {
                     "type": "string"
                 }
             }
@@ -1441,6 +1540,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
